# wasm4-aot

./: .gitmodules  Dockerfile  LICENSE  Makefile.dkp-3ds  Makefile.dkp-gba  Makefile.dkp-nds  Makefile.dkp-nds.arm7  Makefile.dkp-nds.arm9  Makefile.had2019  Makefile.psp  README.md  build.sh
meson/: meson.build
meson/subprojects/: sdl2.wrap
misc/: gen_gba_fb_table.py  gen_had2019_fb_table.py  gen_triangle_wave.py
src/: framebuffer.cpp  framebuffer.h  main.c  platform_shim.h  runtime.c  runtime.h  util.c  w2c2_base.h  w4-wasm-shim.c  wasm-cart.h  wasm-shim.c
src/apu/: apu.c  apu.h
src/platform/3ds/: grapefruit.c  grapefruit.h  platform.c  platform.h  platform_apu.c  shader.v.pica
src/platform/gba/: platform.c  platform.h
src/platform/gba-tonc/: fb_table.inc  platform.c  platform.h
src/platform/had2019/: fb_table.inc  platform.c  platform.h
src/platform/nds/: platform.c  platform.h  platform_apu.c
src/platform/nds/arm7/: main.c
src/platform/pc-sdl2/: platform.c  platform.h
src/platform/psp/: fb_table.inc  platform.c  platform.h
src/wasm2c/: wasm-rt-impl.c  wasm-rt-std.c  wasm-rt-std.h
